--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         id: get
         run: |
           export tag=$(wget -qO- https://api.github.com/repos/gohugoio/hugo/releases | jq -r 'first(.[] | select(.prerelease == false and .draft == false)) | .tag_name' | sed s/^v//)
-          echo "::info title='Hugo Latest Release'::Found ${tag} latest release tag name"
+          echo "::notice title='Hugo Latest Release'::Found ${tag} latest release tag name"
           echo "tag=$tag" >> $GITHUB_OUTPUT
   release_standard_edition:
     name: Release Standard Edition
