do not increment pkgrel on scheduled workflows
Signed-off-by: xeptore <29199390+xeptore@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,10 +56,9 @@ jobs:
           fetch-depth: 0
       - name: Generate Standard PKGBUILD
         run: |
-          export TMP_1=${{ github.event_name == 'push' }}
-          export TMP_2=${{ github.event_name == 'scheduled' }}
-          echo "$TMP_1"
-          echo "$TMP_2"
+          if [[ '${{ github.event_name == 'schedule' }}' == 'true' ]]; then
+            export NO_PKGREL_INCREMENT=1
+          fi
           VERSION_NUMBER=${{ needs.get_latest_hugo_tag.outputs.tag }} ./generate-standard-pkgbuild.sh > PKGBUILD
           cat PKGBUILD
       - name: Publish to AUR
@@ -88,6 +87,9 @@ jobs:
           fetch-depth: 0
       - name: Generate Extended PKGBUILD
         run: |
+          if [[ '${{ github.event_name == 'schedule' }}' == 'true' ]]; then
+            export NO_PKGREL_INCREMENT=1
+          fi
           VERSION_NUMBER=${{ needs.get_latest_hugo_tag.outputs.tag }} ./generate-extended-pkgbuild.sh > PKGBUILD
           cat PKGBUILD
       - name: Publish to AUR
