add docker-credential-pass pkg
Signed-off-by: xeptore <29199390+xeptore@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ permissions:
   statuses: none
 jobs:
   hugo_extended_edition_release:
-    name: Hugo Release Extended Edition
+    name: Release gohugo-extended-bin
     permissions:
       contents: read
     timeout-minutes: 7
@@ -34,7 +34,7 @@ jobs:
         id: get_latest_release
         run: |
           export tag=$(wget -qO- https://api.github.com/repos/gohugoio/hugo/releases | jq -r 'first(.[] | select(.prerelease == false and .draft == false)) | .tag_name' | sed s/^v//)
-          echo "::notice title=Hugo Latest Release::Found ${tag} latest release tag name"
+          echo "::notice title=gohugo-extended-bin Latest Release::Found ${tag} latest release tag name"
           echo "tag=$tag" >> $GITHUB_OUTPUT
       - name: Checkout
         uses: actions/checkout@v4
@@ -46,7 +46,7 @@ jobs:
           if [[ '${{ github.event_name == 'schedule' }}' == 'true' ]]; then
             export NO_PKGREL_INCREMENT=1
           fi
-          VERSION_NUMBER=${{ steps.get_latest_release.outputs.tag }} ./hugo/pkgbuild-extended.sh
+          VERSION=${{ steps.get_latest_release.outputs.tag }} ./gohugo-extended-bin/pkgbuild.sh
           cat PKGBUILD
       - name: Publish to AUR
         uses: xeptore/github-actions-deploy-aur@v1.0.0-beta
@@ -59,7 +59,7 @@ jobs:
           allow_empty_commits: false
           test: true
   docker_credential_pass_bin_release:
-    name: Docker Credential Pass Release
+    name: Release docker-credential-pass-bin
     permissions:
       contents: read
     timeout-minutes: 7
@@ -69,7 +69,7 @@ jobs:
         id: get_latest_release
         run: |
           export tag=$(wget -qO- https://api.github.com/repos/docker/docker-credential-helpers/releases | jq -r 'first(.[] | select(.prerelease == false and .draft == false)) | .tag_name' | sed s/^v//)
-          echo "::notice title=Upstream Latest Release::Found ${tag} latest release tag name"
+          echo "::notice title=docker-credential-pass-bin Latest Release::Found ${tag} latest release tag name"
           echo "tag=$tag" >> $GITHUB_OUTPUT
       - name: Checkout
         uses: actions/checkout@v4
@@ -81,12 +81,47 @@ jobs:
           if [[ '${{ github.event_name == 'schedule' }}' == 'true' ]]; then
             export NO_PKGREL_INCREMENT=1
           fi
-          VERSION_NUMBER=${{ steps.get_latest_release.outputs.tag }} ./docker-credential-pass-bin/pkgbuild.sh
+          VERSION=${{ steps.get_latest_release.outputs.tag }} ./docker-credential-pass-bin/pkgbuild.sh
           cat PKGBUILD
       - name: Publish to AUR
         uses: xeptore/github-actions-deploy-aur@v1.0.0-beta
         with:
           pkgname: docker-credential-pass-bin
+          pkgbuild: ./PKGBUILD
+          commit_username: ${{ secrets.AUR_USERNAME }}
+          commit_email: ${{ secrets.AUR_EMAIL }}
+          ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
+          allow_empty_commits: false
+          test: true
+  docker_credential_pass_release:
+    name: Release docker-credential-pass
+    permissions:
+      contents: read
+    timeout-minutes: 7
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get Latest Release Tag
+        id: get_latest_release
+        run: |
+          export tag=$(wget -qO- https://api.github.com/repos/docker/docker-credential-helpers/releases | jq -r 'first(.[] | select(.prerelease == false and .draft == false)) | .tag_name' | sed s/^v//)
+          echo "::notice title=docker-credential-pass Latest Release::Found ${tag} latest release tag name"
+          echo "tag=$tag" >> $GITHUB_OUTPUT
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          clean: true
+          fetch-depth: 0
+      - name: Generate PKGBUILD
+        run: |
+          if [[ '${{ github.event_name == 'schedule' }}' == 'true' ]]; then
+            export NO_PKGREL_INCREMENT=1
+          fi
+          VERSION=${{ steps.get_latest_release.outputs.tag }} ./docker-credential-pass/pkgbuild.sh
+          cat PKGBUILD
+      - name: Publish to AUR
+        uses: xeptore/github-actions-deploy-aur@v1.0.0-beta
+        with:
+          pkgname: docker-credential-pass
           pkgbuild: ./PKGBUILD
           commit_username: ${{ secrets.AUR_USERNAME }}
           commit_email: ${{ secrets.AUR_EMAIL }}
