--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Get Latest Release Tag
         id: get_latest_release
         run: |
-          export tag=$(wget -qO- https://api.github.com/repos/docker/docker-credential-helpers/releases | jq -r 'first(.[] | select(.prerelease == false and .draft == false)) | .tag_name' | sed s/^v//)
+          export tag="$(wget -qO- 'https://api.github.com/repos/docker/docker-credential-helpers/releases/latest' | jq -r '.tag_name' | sed 's/^v//')"
           echo "::notice title=docker-credential-pass Latest Release::Found ${tag} latest release tag name"
           echo "tag=$tag" >> $GITHUB_OUTPUT
       - name: Checkout
